# geometry

./: .gitignore  LICENSE  README.md  hello  pyproject.toml  setup.py
.github/workflows/: python-package.yml
geometry/: circle.py
geometry/tests/: test_cirlce.py
src/geometry/: __init__.py  circle.py
tests/: test_circle.py
